--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,10 @@
   "dependencies": {
     "requirejs": "~2.1.5",
     "lodash": ">= 2.2.1",
-    "jasmine": "~1.3.1"
+    "jasmine": "~1.3.1",
+    "svg.js": "~1.0.0-rc.9"
+  },
+  "devDependencies": {
+    "svg.js": "~1.0.0-rc.9"
   }
 }
