--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,9 @@
     "requirejs": "~2.1.5",
     "lodash": ">= 2.2.1",
     "jasmine": "~1.3.1",
-    "svg.js": "~1.0.0-rc.9"
+    "svg.js": "~1.0.0-rc.9",
+    "require-cs": "~0.4.4",
+    "karma": "~0.2.2"
   },
   "devDependencies": {
     "svg.js": "~1.0.0-rc.9"
