--- a/package.json
+++ b/package.json
@@ -42,5 +42,8 @@
     "karma-phantomjs-launcher": "~0.1.0",
     "karma-requirejs": "~0.2.0",
     "karma-script-launcher": "~0.1.0"
+  },
+  "dependencies": {
+    "browserify": "^4.2.0"
   }
 }
