--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,7 @@
     "requirejs": "~2.1.5",
     "lodash": ">= 2.2.1",
     "svg.js": "~1.0.0-rc.9",
-    "require-cs": "~0.4.4",
+    "require-cs": "~0.4.4"
   },
   "devDependencies": {
     "svg.js": "~1.0.0-rc.9",
